--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <a class="navbar-brand" href="#">
-                <img src="/images/mini-logo.png" width="70" height="" alt="">
+                <img src="https://github.com/apolocervntes/minitest/blob/main/images/mini-logo.png?raw=true" width="70" height="" alt="">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
