--- a/index.html
+++ b/index.html
@@ -4,91 +4,67 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <meta name="description" content="Desarrollo web bien hecho asi de simple">
+        <meta name="author" content="Capital Web">
+        <meta property="og:site_name" content="CAPITAL WEB" /> <!-- website name -->
+        <meta property="og:site" content="https://webcapital.netlify.app" /> <!-- website link -->
+        <meta property="og:title" content="CAPITAL WEB" /> <!-- title shown in the actual shared post -->
+        <meta property="og:description" content="Desarrollo web bien hecho asi de simple" />
+        <!-- description shown in the actual shared post -->
+        <meta property="og:image"
+            content="https://github.com/apolocervntes/capitalweb/blob/main/media/header%20back.jpg?raw=true" />
+        <!-- metas for sociaal media -->
+        <meta name="twitter:title" content="Capital Web">
+        <meta name="twitter:description" content="Desarrollo web bien hecho asi de simple">
+        <meta name="twitter:image"
+            content="https://github.com/apolocervntes/capitalweb/blob/main/media/header%20back.jpg?raw=true">
+        <meta name="twitter:card" content="summary_large_image">
 
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Montserrat&display=swap"
+            rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="/styles/stylesheet.css">
+        <link rel="icon" href="media/logocw.svg">
+        <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+        <title>Capital Web</title>
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark ">
-            <a class="navbar-brand" href="#">
-                <img src="https://github.com/apolocervntes/minitest/blob/main/images/mini-logo.png?raw=true" width="70" height="" alt="">
-            </a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Ofertas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Nosotros</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link  dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Modelos
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown ">
-                            <a class="dropdown-item text-capitalize " href="#">hatch 3 doors</a>
-                            <a class="dropdown-item text-capitalize " href="#">hatch 5 doors</a>
-                            <a class="dropdown-item text-capitalize " href="#">convertible</a>
-                            <a class="dropdown-item text-capitalize " href="#">clubman</a>
-                            <a class="dropdown-item text-capitalize " href="#">countryman</a>
-
-                            <div class="dropdown-divider" style="border:solid 1px #e5383b;"></div>
-
-                            <a class="dropdown-item text-capitalize" href="#">Contacto</a>
-                            <a class="dropdown-item text-capitalize" href="#">distribuidores</a>
-                        </div>
-                    </li>
-
-                </ul>
-
-            </div>
-        </nav>
-
-        <div class="d-flex    heroshot  text-center  justify-content-center text-capitalize  ">
-            <div class="mask-custom d-flex flex-column align-items-center text-center justify-content-center w-100  ">
-                <h1>
-                    the all new
-                </h1>
-                <p class="w-75">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro deleniti aliquam asperiores aut
-                    tempora quae vel facilis accusantium dolore eius repellat eveniet, saepe earum sed necessitatibus,
-                    ipsam nam excepturi doloremque?
+        <div class="jumbotron jumbotron-fluid ">
+            <div class="container landing">
+                <a class="navbar-brand " href="#">
+                    <img class="img-fluid" src="/media/HMMMM.... WEB  (1).svg"   alt="alternative">
+                </a>
+                <p class="lead text-capitalize">comencemos</p>
+                <p class="lead">
+                    <a class="btn badge-pill badge btn-lg" href="inicio.html" role="button">iniciar</a>
                 </p>
-                <div class="header-contact container d-flex justify-content-between ">
-                    <button type="button" class="btn py-80 text-capitalize header-btn">Contact</button>
-                    <button type="button" class="btn py-80 text-capitalize header-btn">more</button>
-                </div>
             </div>
-
-        </div>
-        </div>
         </div>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        <footer class="fixed-bottom " id="footer">
+            <nav class="nav justify-content-center">
+                <a class="nav-link active text-capitalize" href="inicio.html">inicio</a>
+                <a class="nav-link text-capitalize" href="#">nosotros</a>
+                <a class="nav-link text-capitalize" href="#">contacto</a>
+
+            </nav>
+        </footer>
+
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
             crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
             crossorigin="anonymous"></script>
     </body>
 
